redirection if token expires

--- a/Full-Stack-JS-Project-Frontend/public/index.html
+++ b/Full-Stack-JS-Project-Frontend/public/index.html
@@ -53,7 +53,7 @@
         <div class="main-navigation">
             <nav class="navbar navbar-expand-lg">
                 <div class="container position-relative">
-                    <a class="navbar-brand" href="index.html">
+                    <a class="navbar-brand" href="/Home">
                         <img src="assets/img/logo/logo.png" alt="logo">
                     </a>
                     <div class="mobile-menu-right">
@@ -80,16 +80,11 @@
                         </div>
                         <div class="offcanvas-body gap-xl-4">
                             <ul class="navbar-nav justify-content-end flex-grow-1">
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle active" href="#"
-                                        data-bs-toggle="dropdown">Home</a>
-                                    <ul class="dropdown-menu fade-down">
-                                        <li><a class="dropdown-item" href="index.html">Home Demo 01</a></li>
-                                        <li><a class="dropdown-item" href="index-2.html">Home Demo 02</a></li>
-                                        <li><a class="dropdown-item" href="index-3.html">Home Demo 03</a></li>
-                                    </ul>
+                                <li class="nav-item ">
+                                    <a class="nav-link" href="/Home">Home</a>
+                                   
                                 </li>
-                                <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+                                <li class="nav-item"><a class="nav-link" href="/About">About</a></li>
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Services</a>
                                     <ul class="dropdown-menu fade-down">
