--- a/Full-Stack-JS-Project-Frontend/public/index.html
+++ b/Full-Stack-JS-Project-Frontend/public/index.html
@@ -85,6 +85,7 @@
                                 <li class="nav-item"><a class="nav-link" href="/Home">Home</a></li>
 
                                 <li class="nav-item"><a class="nav-link" href="/About">About</a></li>
+                                <li class="nav-item"><a class="nav-link" href="/About">Publication</a></li>
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Services</a>
                                     <ul class="dropdown-menu fade-down">
