--- a/Full-Stack-JS-Project-Frontend/public/index.html
+++ b/Full-Stack-JS-Project-Frontend/public/index.html
@@ -17,6 +17,7 @@
 
     <!-- css -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <script src="https://kit.fontawesome.com/your-kit-id.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/all-fontawesome.min.css">
     <link rel="stylesheet" href="assets/css/animate.min.css">
@@ -85,7 +86,7 @@
                                 <li class="nav-item"><a class="nav-link" href="/Home">Home</a></li>
 
                                 <li class="nav-item"><a class="nav-link" href="/About">About</a></li>
-                                <li class="nav-item"><a class="nav-link" href="/About">Publication</a></li>
+                                <li class="nav-item"><a class="nav-link" href="/Publication">Publication</a></li>
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Services</a>
                                     <ul class="dropdown-menu fade-down">
