Choose favorite activities

--- a/Full-Stack-JS-Project-Frontend/public/index.html
+++ b/Full-Stack-JS-Project-Frontend/public/index.html
@@ -174,7 +174,7 @@
                                     <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Portfolio</a>
                                     <ul class="dropdown-menu fade-down">
                                         <li><a class="dropdown-item" href="portfolio.html">Portfolio One</a></li>
-                                        <li><a class="dropdown-item" href="portfolio-2.html">Portfolio Two</a></li>
+                                        <li><a class="dropdown-item" href="/favoriteActivities">favorite activities</a></li>
                                         <li><a class="dropdown-item" href="portfolio-single.html">Portfolio Single</a>
                                         </li>
                                     </ul>
