add/get/update appointment

--- a/Full-Stack-JS-Project-Frontend/public/index.html
+++ b/Full-Stack-JS-Project-Frontend/public/index.html
@@ -186,7 +186,8 @@
                                         <li><a class="dropdown-item" href="blog-single.html">Blog Single</a></li>
                                     </ul>
                                 </li>
-                                <li class="nav-item"><a class="nav-link" href="/PsychiatristList">Contact</a></li>
+                                <li class="nav-item"><a class="nav-link" href="/appointment-history">Appointment History</a></li>
+
                             </ul>
                             <!-- nav-right -->
                             <div class="nav-right">
