--- a/Full-Stack-JS-Project-Frontend/public/index.html
+++ b/Full-Stack-JS-Project-Frontend/public/index.html
@@ -101,6 +101,7 @@
                                         <li><a class="dropdown-item" href="about.html">About Us</a></li>
                                         <li><a class="dropdown-item" href="team.html">Our Team</a></li>
                                         <li><a class="dropdown-item" href="/AddAvailabilityForm">AddAvailabilityForm</a></li>
+                                        <li><a class="dropdown-item" href="/Forum">Forum</a></li>
                                         <li class="dropdown-submenu">
                                             <a class="dropdown-item dropdown-toggle" href="#">Events</a>
                                             <ul class="dropdown-menu">
