--- a/Full-Stack-JS-Project-Frontend/public/index.html
+++ b/Full-Stack-JS-Project-Frontend/public/index.html
@@ -171,15 +171,15 @@
                                         <li><a class="dropdown-item" href="404.html">404 Error</a></li>
                                     </ul>
                                 </li>
-                                <!-- <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Portfolio</a>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Activity</a>
                                     <ul class="dropdown-menu fade-down">
-                                        <li><a class="dropdown-item" href="portfolio.html">Portfolio One</a></li>
+                                        <li><a class="dropdown-item" href="/add-activity">add activity</a></li>
                                         <li><a class="dropdown-item" href="/favoriteActivities">favorite activities</a></li>
                                         <li><a class="dropdown-item" href="portfolio-single.html">Portfolio Single</a>
                                         </li>
                                     </ul>
-                                </li> -->
+                                </li> 
                                 <!-- <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Blog</a>
                                     <ul class="dropdown-menu fade-down">
