--- a/Full-Stack-JS-Project-Frontend/public/index.html
+++ b/Full-Stack-JS-Project-Frontend/public/index.html
@@ -187,7 +187,22 @@
                                         <li><a class="dropdown-item" href="blog-single.html">Blog Single</a></li>
                                     </ul>
                                 </li> -->
-                                <li class="nav-item"><a class="nav-link" href="/appointment-history">Appointment History</a></li>
+
+
+
+
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Appointment</a>
+                                    <ul class="dropdown-menu fade-down">
+                                        <li><a class="dropdown-item" href="/appointment-history">History</a></li>
+                                        <li><a class="dropdown-item" href="/chat">Chat</a></li>
+                                        </li>
+                                    </ul>
+                                </li> 
+
+
+
+
 
                             </ul>
                             <!-- nav-right -->
