filter and design front activities

--- a/Full-Stack-JS-Project-Frontend/public/index.html
+++ b/Full-Stack-JS-Project-Frontend/public/index.html
@@ -175,7 +175,7 @@
                                     <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Activity</a>
                                     <ul class="dropdown-menu fade-down">
                                         <li><a class="dropdown-item" href="/add-activity">add activity</a></li>
-                                        <li><a class="dropdown-item" href="/favoriteActivities">favorite activities</a></li>
+                                        <li><a class="dropdown-item" href="/Activities">activities</a></li>
                                         <li><a class="dropdown-item" href="portfolio-single.html">Portfolio Single</a>
                                         </li>
                                     </ul>
