--- a/Full-Stack-JS-Project-Frontend/public/index.html
+++ b/Full-Stack-JS-Project-Frontend/public/index.html
@@ -10,7 +10,7 @@
     <meta name="theme-color" content="#000000" />
 
     <!-- Title -->
-    <title>EspritCare - Senior And Elderly Care</title>
+    <title>EspritCare - Mental health</title>
 
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="%PUBLIC_URL%/assets/img/logo/favicon.png" />
